--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ __pycache__/
 .ipynb_checkpoints/
 .Rhistory
 corgan_ckpts/
+examples/example_test.csv
+examples/example_train.csv
+examples/example_model.pkl
+
